--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "tsc"
   },
   "dependencies": {
+    "@theme-ui/components": "0.3.4",
     "date-fns": "2.10.0",
     "gray-matter": "4.0.2",
     "next": "10.0.2",
@@ -23,6 +24,7 @@
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/theme-ui__components": "^0.2.6",
     "prettier": "2.2.0",
     "typescript": "4.1.2"
   }
