--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:watch": "next-remote-watch ./posts",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "typescript": "tsc"
   },
   "dependencies": {
