--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "date-fns": "2.10.0",
     "gray-matter": "^4.0.2",
-    "next": "10.0.2",
-    "next-mdx-remote": "^1.0.0",
-    "next-remote-watch": "^0.2.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "theme-ui": "0.3.4",
+    "next": "10.1.3",
+    "next-mdx-remote": "2.1.3",
+    "next-remote-watch": "1.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "theme-ui": "0.6.2",
     "typeface-source-sans-pro": "1.1.13"
   },
   "devDependencies": {
